package com.cupid.matching.exception;

public class InvalidSwipeException extends RuntimeException {

    public InvalidSwipeException(String message) {
        super(message);
    }
}