package com.cupid.matching.model;

public enum MatchStatus {
    ACTIVE,
    UNMATCHED
}
