package com.cupid.matching.model;

public enum SwipeDecision {
    LIKE,
    DISLIKE
}
